<resources>
    <string name="app_name">Bobworx</string>
    <string name="log_in">Log in</string>
    <string name="login_error_unverified">Could not verify token, try logging in</string>
    <string name="login_error_undefined">Could not log in</string>
    <string name="tracks">TRACKS</string>
    <string name="back">Back</string>
    <string name="error_compares_network">Error getting compares (network)</string>
    <string name="error_compares_parse">Error processing compares</string>
    <string name="error_login">Could not log in</string>
    <string name="error_adding_upc">Error adding UPC</string>
    <string name="added_UPC">Added UPC</string>
    <string name="upc_not_added">UPC not added</string>
    <string name="error_invalid_upc">Invalid UPC</string>
    <string name="error_untripping">Error untripping</string>
    <string name="signed">Signed</string>
    <string name="tripped">Tripped</string>
    <string name="group_name">Group Name</string>
    <string name="name">NAME</string>
    <string name="control">control</string>
    <string name="competitor">competitor</string>
    <string name="difference">difference</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="weighted">Weighted</string>
    <string name="exact_match_404">Exact match does not exist at competitor</string>
</resources>